--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ button {
     border-radius: 5px;
     font-size: 18px;
     cursor: pointer;
+    width: 100%;
 }
 
 button:hover {
@@ -258,8 +259,12 @@ footer {
                 <label for="jumlah-robux">Jumlah Robux:</label>
                 <input type="number" id="jumlah-robux" name="jumlah-robux" min="1" max="10000000000000" required>
             <p id="total-harga">Total Harga: Rp 0</p>
-             <button type="button" id="show-invoice-button" disabled>Lanjutkan</button><br>
-        </section></form>
+             <button type="button" id="show-invoice-button" disabled>Lanjutkan</button><br></form><br></section>
+             <section class="card">
+             <h3>Login / Register</h3>
+             <a href="./login"><button>Login</button></a><br><br>
+             <a href="./register"><button>Register</button></a>
+        </section>
         
         <!-- Bagian "Tentang Kami" sebagai card -->
         <section id="about-us" class="card">
